<resources>
    <string name="app_name">FIVE88 KHO GAME VIP2021</string>
    <string name="desc">This is a Image</string>
    <string name="Open" />
    <string name="Close" />

    <string name="htitle1">Giới thiệu nhà cái Five88</string>
    <string name="hdesc1"> \t Không ngừng phát triển và mở rộng quy mô, Five88 bắt đầu nhâm nhập thị trường Việt Nam và nhiều nước khác. Cung cấp những trải nghiệm tuyệt vời nhất, nhà cái ngày càng nhận được sự yêu thích của người chơi. Không chỉ tham gia cá cược, bạn còn có thể giao lưu, kết bạn tại đây.</string>

    <string name="htitle2">Một số đánh giá tổng quan về Five88</string>
    <string name="hdesc2"> \t Trải nghiệm của khách hàng là điều mà nhà cái trực tuyến chú trọng nhất. Chính vì vậy, chất lượng các dịch vụ luôn không ngừng được nâng cao. Bạn sẽ tìm thấy một thế giới cá cược vô cùng lành mạnh tại đây.</string>

    <string name="htitle3">Giao diện web của Five88</string>
    <string name="hdesc3"> \t Nhằm tạo sự thuận lợi nhất cho người chơi, trang web của nhà cái được thiết kế rất đơn giản. Giao diện với nền đen và phông chữ vàng làm chủ đạo. Thiết kế này tạo cho trang web sự sang trọng và hiện đại.

Bố cục của trang web được phân chia rất rõ ràng. Các nội dung quan trọng đều được đặt ở phía trên giao diện. Điều này giúp người chơi dễ truy cập và tìm kiếm các thông tin cần thiết.

Đồng thời, hình ảnh và chữ trong web rất rõ nét. Màu sắc giao diện không gây lóa mắt. Đường truyền tại đây cũng rất ổn định. Bạn có thể nhanh chóng đến các mục khác chỉ với 1 cú click chuột.</string>

    <string name="htitle4">Sản phẩm cá cược và trò chơi đa dạng</string>
    <string name="hdesc4"> \t Kho trò chơi của Five88 rất đa dạng. Có rất nhiều hình thức cá cược online cho khách chơi lựa chọn như: poker, casino trực tuyến hoặc number game,… Tỷ lệ cược tại đây hấp dẫn so với các nhà cái khác. Ngoài ra, bạn có thể tận hưởng rất nhiều giải đấu lớn trên thế giới như Premier League, Serie, vô địch Tây Ban Nha.
    \n\n
    Trở thành thành viên chính thức của nhà cái, bạn sẽ có cơ hội trải nghiệm những trò chơi đẳng cấp nhất. Các bước đăng ký vô cùng đơn giản. Không cần tốn quá nhiều thời gian, bạn đã có thể hòa mình vào cộng đồng cá cược hàng nghìn người.</string>

    <string name="desc4">Các chương trình khuyến mãi hấp dẫn
        \n\n
Five88 được đánh giá là nhà cái có nhiều chương trình khuyến mãi “khủng”. Sau đây là hai chương trình nổi bật tại nhà cái này:
\n\n
Khuyến mãi 100% thẻ nạp
Chương trình này áp dụng cho các thành viên mới của nhà cái. Bạn sẽ được tặng 100% giá trị thẻ nạp khi đăng kí tài khoản. Số tiền thưởng người chơi nhận được có thể lên đến 15 triệu đồng. Tiền thưởng này sẽ được cộng vào tài khoản của bạn. Sau 20 vòng cược, bạn có quyền rút tiền.
\n\n
Điều kiện để tham gia chương trình này như sau:
        \n\n
•Người chơi chưa từng tham gia các khuyến mãi khác.
        \n\n
•Số tiền nạp thẻ tối thiểu là 100.000đ
        \n\n
•Người chơi hoàn thành đủ số vòng cược hợp lệ trong thời gian quy định.
        \n\n
Chương trình hoàn trả lên đến 1,58%
Để thu hút người chơi, Five88 còn có chương trình hoàn trả lên đến 1,58%. Khi tham gia chơi tại nhà cái, bạn sẽ được nhận tiền hoàn trả. Ví dụ bạn đặt cược 1.000.000đ, số tiền hoàn trả sẽ là 15.800đ. Đặt cược càng cao số tiền hoàn trả nhận được càng lớn.
\n\n
Chương trình có điều kiện áp dụng như sau:
\n\n
•Các trò chơi casino sẽ không được áp dụng hoàn trả.
        \n\n
•Chương trình khuyến mãi này không giới hạn về thời gian và số tiền thưởng.
        \n\n
•Thời gian nhận tiền hoàn trả là 11h45 hàng ngày.</string>

    <string name="desc5">Chất lượng bảo mật tốt
        \n\n
Bảo mật thông tin là mối quan tâm hàng đầu của rất nhiều khách hàng tại nhà cái online. Hiểu được điều này, Five88 xây dựng chính sách bảo mật vô cùng uy tín. Các dữ liệu của người chơi luôn được nhà cái giữ bí mật. Mọi người có thể truy cập vào DanhGiaNhaCai.com để được cập nhật những tỷ lệ kèo cá cược tới từ nhà cái này giúp bạn có tỷ ăn cược cao hơn.
   \n\n
Nha cái có kết nối bảo mật sử dụng SSL 128 Bit. Đồng thời, mã hóa mật khẩu MD5. Thông tin cá nhân của bạn luôn được đảm bảo an toàn 100%. Nhà cái cũng cam kết sẽ không bán thông tin của khách cho bên thứ ba.
   \n\n
Dịch vụ khách hàng
Nhà cái Five88 được đánh giá có nhiều dịch vụ khách hàng tốt. Sau đây là một số đánh giá về dịch vụ khách hàng tại đây.
   \n\n
Chất lượng chăm sóc khách hàng
Đội ngũ nhân viên chăm sóc khách hàng tại nhà cái thường trực 24/24. Bất kì lúc nào bạn cần giúp đỡ họ đều có mặt. Các nhân viên đều có thái độ thân thiện và phong cách chuyên nghiệp. Những khó khăn về thủ tục đăng ký, cách tham gia trò chơi đều được hỗ trợ nhanh chóng.
   \n\n
Nhà cái có hệ thống an ninh vô cùng chặt chẽ. Nếu phát hiện bất kì dấu hiệu khả nghi nào về việc tài khoản bị xâm nhập, bạn hãy báo cáo ngay nhé. Nhà cái luôn hỗ trợ cho người chơi kịp thời.
   \n\n
Khách hàng đánh giá Five88 có uy tín không?
Một trong những yếu tố để Five88 phát triển nhanh chính là lắng nghe khách hàng. Mặc dù gia nhập thị trường Việt Nam muộn nhưng nhà cái đã tạo dựng được một vị thế nhất định. Ưu điểm của nhà cái này là dám nhìn thẳng vào những đánh giá khen, chê của khách hàng để hoàn thiện hơn.
   \n\n
Chính vì hướng đi đúng đắn này, nó đã trở thành nhà cái được nhiều khách hàng tin tưởng. Hầu hết mọi đánh giá của người chơi cho nhà cái đều rất tốt. Rất nhiều khách hàng khẳng định sẽ trung thành và gắn bó với nhà cái lâu dài.</string>
</resources>